fixed layout issues, corrected flex container on services.html - better use of calc()

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -215,11 +215,11 @@ header nav a {
 
 .cta {
     width: 100%;
-    padding: 50px 0 50px 0;
+    padding: 50px 10%;
     /* height: 500px; */
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
     margin-bottom: 3em;
 }
 
@@ -263,6 +263,8 @@ header nav a {
     padding: 2em 0;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: center;
 }
 
 .main-img {
@@ -278,10 +280,16 @@ header nav a {
     padding: 2em 0;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: center;
 }
 
-.card {
-    padding-right: 1em;
+.main-top .card {
+    width: calc(50% - 1em);
+}
+
+.main-bottom .card {
+    width: calc((100% / 3) - 1em);
 }
 
 .contact {
@@ -387,6 +395,7 @@ p {
 
 .vision-card {
     width: 100%;
+    margin: 2em 0;
 }
 
 br {
@@ -427,7 +436,7 @@ br {
     background-repeat: no-repeat;
     height: 300px;
     border-radius: 50px;
-    margin: 60px 0;
+    margin: 40px 0;
 }
 
 .vision-card-small {
@@ -438,14 +447,6 @@ br {
 .container-vision-card-small {
     display: flex;
     flex-wrap: wrap;
-}
-
-.main p {
-    margin-bottom: 40px;
-}
-
-.main-top p {
-    margin: 0;
 }
 
 br {
@@ -475,19 +476,20 @@ br {
 }
 
 .cards-container {
-    padding-top: 2.5em;
+    padding: 2.5em 0;
     margin-top: 2em;
     border-top: 2px solid rgba(0, 0, 0, 0.25);
     display: flex;
+    height: calc(945px + 10em);
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: space-between;
+    align-content: space-between;
 }
 
 .flex-card {
     border: black solid 1px;
-    width: 48%;
-    margin-bottom: 2.5em;
+    width: calc(50% - 1.25em);
+    height: 315px;
     padding: 2em;
     background-color: rgb(236, 236, 236);
 }
